--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>My Animated Joke</h1>
-    <img id="jokeImage" src="setup.png" alt="Setup Image" width="200">
+    <img id="jokeImage" src="why.png" alt="Setup Image" width="200">
     <p id="setup">Why did the student bring a ladder to school?</p>
     <button id="showPunchline">Tell me the punchline!</button>
     <p id="punchline" class="hidden">Because they wanted to go to high school!</p>
