--- a/index.html
+++ b/index.html
@@ -9,12 +9,26 @@
 <body>
   <div class="container">
     <h1>My Animated Joke</h1>
-    <img id="jokeImage" src="why.png" alt="Setup Image" width="200">
-    <p id="setup">Why did the student bring a ladder to school?</p>
-    <button id="showPunchline">Tell me the punchline!</button>
-    <p id="punchline" class="hidden">Because they wanted to go to high school!</p>
+    <img id="jokeImage" src="idk.png" alt="Setup Image" width="200">
+    <p id="setup">Knock Knock...</p>
+    <button id="showPunchline">Who's there?</button>
+    <p id="punchline" class="hidden">John Pork</p>
+    <img id="Jork" src="John_Pork.jpg" alt="Fading image" width="400">
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
+
+<!--
+<p>JavaScript can change HTML attribute values.</p>
+
+<p>In this case JavaScript makes the monkey endlessly think or have an idea</p>
+
+<button onclick="document.getElementById('myImage').src='monkey.jpeg'">Think monkey (demo 2)</button>
+
+<img id="myImage" src="monkey.jpeg" style="width:100px">
+
+<button onclick="document.getElementById('myImage').src='monkoy.jpeg'">Idea'd monkey (demo 2)</button>
+!-->
