--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>My Animated Joke</h1>
     <img id="jokeImage" src="idk.png" alt="Setup Image" width="200">
     <p id="setup">Knock Knock...</p>
-    <button id="showPunchline">Who's there?</button>
-    <img id="Jork" src="John_Pork.png" alt="Fading image" width="400" class="hidden">
+    <button id="showPunchline" class="bounce">Who's there?</button>
+    <img id="Jork" src="John_Pork.png" alt="Fading image" width="400" class="hidden" text-align="center">
     <p id="punchline" class="hidden">John Pork</p>
   </div>
 
