--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <h1>My Animated Joke</h1>
     <img id="jokeImage" src="idk.png" alt="Setup Image" width="200">
     <p id="setup">Knock Knock...</p>
-    <button id="showPunchline" class="bounce">Who's there?</button>
-    <img id="Jork" src="John_Pork.png" alt="Fading image" width="400" class="hidden" text-align="center">
+    <button id="showPunchline">Who's there?</button>
     <p id="punchline" class="hidden">John Pork</p>
+    <img id="Jork" src="John_Pork.jpg" alt="Fading image" width="400">
+    <button id="resetButton">Reset</button>
   </div>
 
   <script src="script.js"></script>
