--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p id="setup">Knock Knock...</p>
     <button id="showPunchline">Who's there?</button>
     <p id="punchline" class="hidden">John Pork</p>
-    <img id="Jork" src="John_Pork.jpg" alt="Fading image" width="400">
+    <img id="Jork" src="John_Pork.png" alt="Fading image" width="400">
   </div>
 
   <script src="script.js"></script>
