--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <audio id="calling" src="ring.mp3"></audio>
   <div class="container">
     <h1>My Animated Joke</h1>
     <img id="jokeImage" src="idk.png" alt="Setup Image" width="200">
