Update joke setup and button text in index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="container">
     <h1>My Animated Joke</h1>
     <img id="jokeImage" src="idk.png" alt="Setup Image" width="200">
-    <p id="setup">Knock Knock...</p>
-    <button id="showPunchline">Who's there?</button>
+    <p id="setup">You should call him...</p>
+    <button id="showPunchline">Call him</button>
     <p id="punchline" class="hidden">John Pork</p>
     <img id="Jork" src="John_Pork.png" alt="Fading image" width="400">
   </div>
